--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "c5bf1afa",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -31,7 +35,11 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "6a87d2d7",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "import collections"
@@ -41,7 +49,11 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "16945226",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "s='abbccc'"
@@ -51,7 +63,11 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "6b3a2802",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -69,14 +85,18 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "105bc82c",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "ename": "SyntaxError",
      "evalue": "unexpected EOF while parsing (3214631134.py, line 5)",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;36m  Input \u001b[1;32mIn [7]\u001b[1;36m\u001b[0m\n\u001b[1;33m    \u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m unexpected EOF while parsing\n"
+      "\u001B[1;36m  Input \u001B[1;32mIn [7]\u001B[1;36m\u001B[0m\n\u001B[1;33m    \u001B[0m\n\u001B[1;37m    ^\u001B[0m\n\u001B[1;31mSyntaxError\u001B[0m\u001B[1;31m:\u001B[0m unexpected EOF while parsing\n"
      ]
     }
    ],
@@ -92,18 +112,22 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "8eac589d",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "ename": "AttributeError",
      "evalue": "'dict' object has no attribute 'iteritems'",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [8]\u001b[0m, in \u001b[0;36m<cell line: 18>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     14\u001b[0m             ret[k] \u001b[38;5;241m=\u001b[39m v\n\u001b[0;32m     16\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m ret\n\u001b[1;32m---> 18\u001b[0m \u001b[43mmost_repeated_letters\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mjackaby\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "Input \u001b[1;32mIn [8]\u001b[0m, in \u001b[0;36mmost_repeated_letters\u001b[1;34m(word_1)\u001b[0m\n\u001b[0;32m      8\u001b[0m     d[letter] \u001b[38;5;241m=\u001b[39m d\u001b[38;5;241m.\u001b[39mget(letter) \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[0;32m     10\u001b[0m ret \u001b[38;5;241m=\u001b[39m {}\n\u001b[1;32m---> 12\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m k,v \u001b[38;5;129;01min\u001b[39;00m \u001b[43md\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43miteritems\u001b[49m():\n\u001b[0;32m     13\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m d[k] \u001b[38;5;241m==\u001b[39m \u001b[38;5;28mmax\u001b[39m(d\u001b[38;5;241m.\u001b[39mvalues()):\n\u001b[0;32m     14\u001b[0m         ret[k] \u001b[38;5;241m=\u001b[39m v\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'dict' object has no attribute 'iteritems'"
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
+      "Input \u001B[1;32mIn [8]\u001B[0m, in \u001B[0;36m<cell line: 18>\u001B[1;34m()\u001B[0m\n\u001B[0;32m     14\u001B[0m             ret[k] \u001B[38;5;241m=\u001B[39m v\n\u001B[0;32m     16\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m ret\n\u001B[1;32m---> 18\u001B[0m \u001B[43mmost_repeated_letters\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43mjackaby\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m)\u001B[49m\n",
+      "Input \u001B[1;32mIn [8]\u001B[0m, in \u001B[0;36mmost_repeated_letters\u001B[1;34m(word_1)\u001B[0m\n\u001B[0;32m      8\u001B[0m     d[letter] \u001B[38;5;241m=\u001B[39m d\u001B[38;5;241m.\u001B[39mget(letter) \u001B[38;5;241m+\u001B[39m \u001B[38;5;241m1\u001B[39m\n\u001B[0;32m     10\u001B[0m ret \u001B[38;5;241m=\u001B[39m {}\n\u001B[1;32m---> 12\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m k,v \u001B[38;5;129;01min\u001B[39;00m \u001B[43md\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43miteritems\u001B[49m():\n\u001B[0;32m     13\u001B[0m     \u001B[38;5;28;01mif\u001B[39;00m d[k] \u001B[38;5;241m==\u001B[39m \u001B[38;5;28mmax\u001B[39m(d\u001B[38;5;241m.\u001B[39mvalues()):\n\u001B[0;32m     14\u001B[0m         ret[k] \u001B[38;5;241m=\u001B[39m v\n",
+      "\u001B[1;31mAttributeError\u001B[0m: 'dict' object has no attribute 'iteritems'"
      ]
     }
    ],
@@ -132,7 +156,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "fff8d565",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   }
